[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pillow>=11.2.0",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "yfinance>=0.2.55",
]
